--- a/app/views/conglomerates/index.html.erb
+++ b/app/views/conglomerates/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Conglomerate#index</h1>
-<p>Find me in app/views/conglomerate/index.html.erb</p>
+<h1>Discover our conglomerates!</h1>
 
 <table>
     <tr>
