--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,11 @@
   <body>
     <%= yield %>
   </body>
+  <footer>
+    <div class="container text-center">
+    <nav class="navbar fixed-bottom navbar-light bg-light navbar-text">
+      made with :love:
+    </nav>
+  </div>
+  </footer>
 </html>
