--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,24 +1,17 @@
-<h1>Companies#show</h1>
-<p>Find me in app/views/companies/show.html.erb</p>
+<div>
+    <h1><%= @company.name %></h1>
+</div>
 
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Subdomain</th>
-        <th>Employees</th>
-        <th>Conglomerate</th>
-    </tr>
-
-    <tr>
-        <td><%= @company.name %></td>
-        <td><%= @company.name%></td>
-        <td><%= @company.subdomain%></td>
-        <td><%= @company.employees_number%></td>
-        <td><%= @company.conglomerate.name%></td>
-    </tr>
-</table>
-
-<iframe width="300" height="300" frameborder="0" style="border:0"
- src="https://www.google.com/maps/embed/v1/place?key=<%=Rails.application.credentials.google_maps_api_key%>&q=<%=@company.location%>"
- allowfullscreen>
-</iframe>
+<div class="container">
+    <div class="card" style="width: 30rem;">
+        <iframe 
+            src="https://www.google.com/maps/embed/v1/place?key=<%=Rails.application.credentials.google_maps_api_key%>&q=<%=@company.location%>"
+            allowfullscreen>
+        </iframe>
+        <div class="card-body">
+            <p class="card-text"><b><%= @company.name.capitalize %></b> is part of <b> <%=@company.conglomerate.name%></b>, 
+            having as subdomain <b> <%= @company.subdomain %> </b>
+            and <b><%=pluralize(@company.employees_number, 'employee')%></b>...</p>
+        </div>
+    </div>
+</div>
