--- a/app/views/conglomerates/show.html.erb
+++ b/app/views/conglomerates/show.html.erb
@@ -4,7 +4,7 @@
     <div>
         <ul class="list-group">
             <% @companies.each do |company| %>
-                <%= link_to company.name, company_url(subdomain: company.subdomain), class: "list-group-item list-group-item-action"%>
+                <%= link_to company.name, company_path(company), class: "list-group-item list-group-item-action"%>
             <% end %>
         </ul>
     </div>
